--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,33 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:postgresql://localhost:5432/ecommerce
+    username: postgres
+    password: admin
+#    url: jdbc:mysql://localhost:3306/ecommerce
+#    username: root
+#    password: admin
   web:
     locale-resolver: fixed
     locale: en
+  app:
+   jwtSecret: mySecretKey123123123123123123112312312321321321312
+   jwtExpirationMs: 3000000
+  ecom:
+    app:
+       jwtCookieName: springBootEcom
+  logging:
+    level:
+      org.springframework: DEBUG
+      org.hibernate.SQL: DEBUG
+      org.springframework.security: DEBUG
+      com.ecommerce.project: DEBUG
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+#        dialect: org.hibernate.dialect.MySQLDialect
 project:
   image: images/
