--- a/pom.xml
+++ b/pom.xml
@@ -119,13 +119,16 @@
             <artifactId>libphonenumber</artifactId>
             <version>9.0.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
         <!--        <dependency>-->
 <!--            <groupId>com.mysql</groupId>-->
 <!--            <artifactId>mysql-connector-j</artifactId>-->
 <!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
-
     </dependencies>
 
 
@@ -155,6 +158,10 @@
         </plugins>
     </build>
     <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
         <repository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
